--- a/index.html
+++ b/index.html
@@ -3,38 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Random Password Generator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-<p>Enter your text or URL</p>
-<input type="text" placeholder="Text or URL" id="qrText">
-<div id="imgBox">
-  <img src="" id="qrImage">
-</div>
-<button onclick="generateQR()">Generate QR Code</button>
+  <div class="Container">
+    <h1>Generat a <br><span>Random Password</span> </h1>
+    <div class="display">
+      <input type="text" id="Password" placeholder="Password">
+      <img src="images/copy.png" onclick="copyPassword()" >
+    </div>
+    <button onclick="createPassword ()"><img src="images/generate.png" > Password Generator</button>
   </div>
 
 <script>
-let imgBox = document.getElementById("imgBox");
-let qrImage = document.getElementById("qrImage");
-let qrText = document.getElementById("qrText");
+const PasswordBox = document.getElementById("Password");
+const lenght =12;
 
-  function generateQR(){
+const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+const lowerCase = "abcdefghijklmnopqrstuvwxyz";
+const number = "0123456789";
+const symbol = "@#$%^&*()_+~|{}[]<>/-=";
 
-    if(qrText.value.length>0){
-      qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
-    imgBox.classList.add("show-img");
-    }else{
-      qrText.classList.add('error');
-      setTimeout(()=>{
-        qrText.classList.remove('error');
-      },1000);
-    }
-  
+const alChars = upperCase+lowerCase+number+symbol;
 
+function  createPassword (){
+  let Password = "";
+  Password += upperCase[Math.floor(Math.random() * upperCase.length)];
+  Password += lowerCase[Math.floor(Math.random() * lowerCase.length)];
+  Password += number[Math.floor(Math.random() * number.length)];
+  Password += symbol[Math.floor(Math.random() * symbol.length)];
+
+  while(lenght>Password.length){
+    Password += alChars[Math.floor(Math.random() * alChars.length)];
   }
+  PasswordBox.value = Password;
+}
+
+function copyPassword(){
+  PasswordBox.select();
+  document.execCommand("copy");
+}
+
 </script>
 
 </body>
